# poolcomfort-galaxywind

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  hacs.json  pyproject.toml
.github/workflows/: tests.yml  validate.yml
custom_components/poolcomfort/: __init__.py  binary_sensor.py  client.py  climate.py  config_flow.py  const.py  coordinator.py  manifest.json  protocol.py  sensor.py  strings.json
custom_components/poolcomfort/translations/: cs.json  en.json
docs/: capture-mikrotik.md  home-assistant.md  protocol.md
poolcomfort_local/: __init__.py  cli.py  client.py  protocol.py
scripts/: pcap_auth_pairs.py  pcap_dump.py
tests/: test_protocol.py
