[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "poolcomfort-local"
version = "0.1.0"
description = "Local UDP client experiments for Galaxywind / Pool Comfort pool heat pumps."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Pool Comfort reverse engineering contributors" }
]
dependencies = []

[project.optional-dependencies]
pcap = ["scapy>=2.5"]
test = ["pytest>=8"]

[project.scripts]
poolcomfort = "poolcomfort_local.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["poolcomfort_local"]
